Fixed bug where weather section will have margin collapse on itself.

--- a/frontend/src/components/DateTimeSection/DateTimeSection.css
+++ b/frontend/src/components/DateTimeSection/DateTimeSection.css
@@ -17,3 +17,7 @@
   justify-content: center;
   text-align: center;
 }
+
+.datetime-container p {
+  margin: 0;
+}
