--- a/frontend/src/components/ForumsSection/ForumsSection.css
+++ b/frontend/src/components/ForumsSection/ForumsSection.css
@@ -1,14 +1,19 @@
 .forumslistitem-container {
   margin: 16px;
   padding: 20px;
-  border-top: solid black 1px;
-  border-bottom: solid black 1px;
+  border: solid 1px #dadada;
+  border-radius: 5px;
 }
 
 .forumslistitem-container:hover {
   cursor: pointer;
   border: none;
   box-shadow: #5465FF 0px 0px 5px;
+}
+
+.forumitem-header {
+  background-color: aliceblue;
+  padding: 5px;
 }
 
 .forumslistitem-container p {
