--- a/frontend/src/components/Section/Section.css
+++ b/frontend/src/components/Section/Section.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  border: #dadada solid 1px;
 }
 
 .section-header {
