--- a/frontend/src/components/WeatherView/WeatherView.css
+++ b/frontend/src/components/WeatherView/WeatherView.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10%
+  padding: 10%;
 }
 
 .weather-content-container p {
