--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,6 @@ font-family: 'Roboto Flex', sans-serif; */
 body {
   font-family: 'Roboto', sans-serif;
   height: 100vh;
-  background-color: aliceblue;
 }
 
 #root {
